Frontend: Toast visibility fix

--- a/liquid-democracy-ui/src/app/administration/administration.component.css
+++ b/liquid-democracy-ui/src/app/administration/administration.component.css
@@ -128,3 +128,7 @@ p-multiselect-panel {
 .topic-button-container {
   text-align: center;
 }
+
+:host ::ng-deep .p-toast {
+  z-index: 2000 !important;
+}
