--- a/liquid-democracy-ui/src/app/delegations/delegations.component.css
+++ b/liquid-democracy-ui/src/app/delegations/delegations.component.css
@@ -81,3 +81,7 @@ button:disabled {
 :host ::ng-deep .p-dialog-mask {
   z-index: 2000 !important;
 }
+
+:host ::ng-deep .p-toast {
+  z-index: 2000 !important;
+}
