--- a/liquid-democracy-ui/src/app/login/login.component.css
+++ b/liquid-democracy-ui/src/app/login/login.component.css
@@ -89,3 +89,7 @@ button:disabled {
   justify-content: space-between;
   width: 100%;
 }
+
+:host ::ng-deep .p-toast {
+  z-index: 2000 !important;
+}
