--- a/liquid-democracy-ui/src/app/login/password-reset/password-reset.component.css
+++ b/liquid-democracy-ui/src/app/login/password-reset/password-reset.component.css
@@ -61,3 +61,7 @@ button:disabled {
   justify-content: space-between;
   width: 100%;
 }
+
+:host ::ng-deep .p-toast {
+  z-index: 2000 !important;
+}
