--- a/liquid-democracy-ui/src/app/votings/voting/voting.component.css
+++ b/liquid-democracy-ui/src/app/votings/voting/voting.component.css
@@ -336,3 +336,7 @@ textarea {
 :host ::ng-deep .p-dialog-mask {
   z-index: 2000 !important;
 }
+
+:host ::ng-deep .p-toast {
+  z-index: 2000 !important;
+}
